fix: 🐛 Resolve bug listar usuarios
